[package]
name = "astryx-kernel"
version.workspace = true
edition.workspace = true

[features]
default = []
test-mode = []
gui-test = []
firefox-test = []
# Opt-in for the userspace alias_test page-aliasing reproducer (Test 44b).
# Spawns 8 worker threads via raw clone(CLONE_VM|CLONE_THREAD|CLONE_SIGHAND)
# doing MAP_PRIVATE mmap churn; runs >100k page faults; sometimes wedges
# under CI watchdog limits.  Master CI runs without it until the
# underlying worker-thread wedge is resolved; enable for diagnostic runs.
alias-test = []
# Opt-in for the six X11-server protocol-conformance tests (251-256)
# introduced alongside PR #317 (SendEvent routing, ICCCM atom stability,
# PropertyNotify mask, global focus).  Each test in isolation completes,
# but the suite as a whole interacts with firefox_oracle / glibc_hello
# fixtures in a way that pushes wall-clock past the 900 s CI watchdog
# budget.  Master CI runs without them until the interaction is
# investigated; X11 functional changes remain in effect regardless.
x11-tests = []
# Opt-in for the three native-core hardening tests (258-260) introduced
# alongside PR #324 (mm/refcount CAS underflow safety, OB refcount +
# handle-table integration, scheduler starvation diagnostic counter).
# Each test in isolation completes under `--features test-mode` but the
# cumulative wall-clock budget overruns the 900 s CI watchdog when
# combined with firefox-test fixtures.  Master CI runs without them
# until the wall-clock interaction is investigated; native-core
# function-level changes (mm/refcount CAS, ob refcount, sched
# STARVATION_BURST emit) remain in effect regardless of this gate.
native-core-tests = []
# W215 Arm-1 diagnostic infrastructure: the page-cache CRC walker
# (`mm/w215_crc.rs`, ~2 MiB BSS shadow table), the cross-CPU DR0
# write-watchpoint plumbing (`arch/x86_64/debug_reg.rs`, IPI vector 0xF1),
# and the matching `record_insert`/`record_evict` hooks in
# `mm/cache.rs`.  Opt-in because the shadow table alone adds ~2 MiB of
# BSS that the bootloader-side `kernel_size = file_size` accounting does
# not reserve (the flat-binary `kernel.bin` excludes BSS), exposing a
# latent PMM-vs-BSS overlap that can corrupt kernel page tables during
# the firefox-test page-cache prepopulate burst.  Gating the diagnostic
# behind its own feature keeps the demo path's BSS small while
# preserving on-demand investigative access.  Implies `firefox-test`
# because the diagnostic shares the firefox-test cache instrumentation.
w215-diag = ["firefox-test"]
# W133: opt-out for cross-CPU TLB shootdown.  Default builds run the full
# shootdown protocol (IPI vector 0xF0, per-CPU active-CR3 mask).  Enable
# this feature only for bisect/baseline runs where you want to compare
# against the pre-PR behaviour — correctness on SMP requires shootdown.
tlb-shootdown-off = []
# Opt-in "soft-pass" network tests that depend on QEMU SLIRP actually
# delivering ICMP echo replies and forwarding DNS queries.  These tests
# (Test 5 ping 8.8.8.8, Test 6 DNS, Test 32 IPv6 DNS, Test 33 IPv6 ping)
# historically passed even when the operation returned no result, which
# made genuine network-stack regressions invisible in CI.  They are now
# off by default and only built into the runner when this feature is
# enabled alongside `test-mode`.  See docs/HARNESS.md.
network-tests = []
# Re-enables test 82 (Win32 PE32+ hello_win32.exe). Currently hangs the
# headless runner — the embedded PE spins in Ring 3 without calling
# ExitProcess under the current scheduler timing. Off by default.
win32-pe-test = []
# Keep the old 8x16 bitmap rectangle placeholder for title-bar text instead of
# using the GDI text engine. Disabled by default; re-enable if the GDI path
# triggers any rendering issue before it is fully validated.
bitmap-title-fallback = []
# Tier-0 syscall tracing. Emits one `[SC] pid=.. tid=.. nr=.. rip=.. a1=.. a2=.. a3=..`
# line per Linux syscall entry on the serial console. Off by default; enable
# alongside `firefox-test` when debugging user-mode regressions via
# `qemu-harness.py grep <sid> '^\[SC\] '`. See docs/HARNESS.md.
syscall-trace = []
# Meta-feature for the differential bytestream harness (INFRA-1, 2026-05-23).
# Pulls in firefox-test (which auto-tracks user-process PIDs into the
# syscall ring) and syscall-trace (which emits the [SC]/[SC-RET] pair
# consumed by `scripts/qemu-harness.py differential-soak`).  No additional
# kernel code is enabled — this exists purely so agents can pass a single
# canonical feature string instead of remembering the exact combination.
# See docs/DIFFERENTIAL_HARNESS_2026-05-23.md.
differential-trace = ["firefox-test", "syscall-trace"]
# Verbose firefox-test tracing.  By default `firefox-test` keeps only the
# essential per-syscall pair (`[SC]` / `[SC-RET]` under `syscall-trace`) plus
# boot banners and the periodic `tick=...` heartbeat — the minimum signal
# needed to measure demo throughput.  Enable this flag to also emit
# `[LINUX-SYS]`, `[MMAP]`, `[FFTEST/mmap-so]`, and `[SC-USTACK]` traces, which
# are useful when symbolising libxul stacks or debugging early mmap failures
# but add ~300 bytes of serial output per syscall.  At ~3 KVM VM-exits per
# 16-byte FIFO chunk that extra volume directly pins CPU 2 in the serial
# driver under nested-virt KVM and prevents the post-#140 throughput from
# being observed.  See drivers/serial.rs for the FIFO-batched write path.
firefox-trace-verbose = []
# Tier-0 page-fault tracing. Emits one `[PF] cr2=.. rip=.. code=.. pid=.. tid=..`
# line per #PF (before VMA resolution). Pairs with `syscall-trace` to make a
# full cause-and-effect stream for Ring 3 crashes. See docs/HARNESS.md.
pf-trace = []
# Tier-1 in-kernel debugger. Opens a read-only JSON introspection TCP server
# on port 9999 (proc-list, proc, vfs-mounts, dmesg, syms, mem, trace-status,
# ping). Driven by `scripts/qemu-harness.py kdb`. Default builds are
# byte-identical to the pre-kdb artefact; every code path is cfg-gated.
# See docs/HARNESS.md.
kdb = []
# Builds a self-test for the fault-immune bugcheck banner printer.
# When enabled (alongside `test-mode`), `test_runner::run` first invokes
# `kernel/src/util/no_alloc_fmt.rs::tests::run_self_tests` to validate
# the stack-only formatters, then triggers a deliberate kernel-mode
# page fault and asserts the banner is emitted cleanly with no
# secondary "fault while formatting" message.  The test halts that
# vCPU on completion (the bugcheck path exits QEMU via isa-debug-exit
# in test-mode), so this feature is OFF by default.
bugcheck-test = []
# PR #127 review caveat: direct test of the re-entrancy guard inside
# `ke::bugcheck`.  When enabled, the bugcheck printer takes a fresh
# deliberate #PF *after* it has emitted its full banner, re-entering
# `ke_bugcheck`; the entry-point guard then emits a single
# "RE-ENTERED BUGCHECK" line and exits QEMU.  The harness verifies the
# RE-ENTERED line is present in the serial log and the QEMU exit code
# is the bugcheck-failure code.  Like `bugcheck-test`, this feature
# is mutually exclusive with a clean test-suite pass (the bugcheck
# path exits QEMU before the normal suite finishes), so it is OFF
# by default and gated behind its own CI job.
bugcheck-reentry-test = ["bugcheck-test"]
# Detailed stack dump (128 words from RSP) on every FUTEX_WAIT registration.
# Expensive under IRQs-off (~130ms cli per FUTEX_WAIT); disabled by default
# even in firefox-test. Use `--features futex-wait-scan` explicitly when
# debugging user-mode futex choreography. Pairs with [FUTEX_WAIT_STACK] and
# [FUTEX_WAIT_REG] lines to form a complete per-waiter trace.
futex-wait-scan = []
# QGA (QEMU Guest Agent) transport: enables the virtio-serial driver and the
# `/dev/vport0p0` character device node that the future userspace QGA daemon
# (Phase QGA-2) will open.  Pair with the harness `--features qga` flag,
# which adds the matching `virtio-serial-pci` + `virtserialport` device on
# the host side.  See virtio 1.2 §5.3 (Console Device).
qga = []
# VFS path-resolution tracing (W83 diagnostic).  Emits one `[VFS/resolve]` line
# per directory component traversed in `vfs::resolve_path_opts` and one extra
# line per symlink follow.  Capped at 20 lines per outermost resolve to bound
# log volume.  Implied by `firefox-test`; standalone for headless diagnostic
# runs (e.g. tracking down a hang in a non-Firefox workload).  When neither
# this nor `firefox-test` is enabled, the trace helper compiles to nothing —
# the 1s deadline in `resolve_path_opts` is *not* feature-gated and is always
# on.
vfs-trace = []
# VFS / FAT32 lock-discipline debug-asserts (W92).  When enabled, FAT32
# panics if `inner` is held at any site that issues block-device I/O
# (read_sectors / write_sectors).  Catches accidental re-introductions of
# the spin-Mutex-across-yield deadlock that triggered the W92 scheduler
# bugcheck (sc=1161 under firefox-test).  Off by default — the runtime
# cost is one extra `try_lock` per device call.
vfs-debug = []
# Vfork canary snapshot-pair + sibling-syscall tagger + axis-N+1
# stack-provenance diagnostic (kernel/src/subsys/linux/vfork_diag.rs).
# Emits `[VFORK-CANARY-PRE/POST]`, `[VFORK-FSCANARY-PRE/POST]`,
# `[VFORK-SIB]`, `[STACK-CANARY-WALK]`, `[STACK-CANARY-FINEGRAIN]`,
# `[STACK-PAGE-PROV]`, and `[VFORK-FS28-WATCH]` lines around the
# `CLONE_VM|CLONE_VFORK` parent-block window so a post-processor can
# discriminate between (a) pre-existing zero canary, (b) in-window
# kernel write, and (c) W215-class page-aliasing on the user-stack
# VMA.  Diagnostic-only — no functional behaviour change.  Implies
# `firefox-test` (the snapshot helper rides the same gated emit path),
# `syscall-trace` (the SIB tagger leans on `get_user_rip` /
# `get_user_rsp_rbp`), and `w215-diag` (the master-canary DR0 watch
# uses the same DR0–DR3 plumbing as the W215 cache walker).
# See POSIX vfork(2) / clone(2), Intel SDM Vol. 3A §6.8 + Vol. 3B
# §17.2.4 / §17.2.5, System V x86_64 ABI §6.4.
vfork-canary-diag = ["firefox-test", "syscall-trace", "w215-diag"]
# ELF write-trace diagnostic (kernel/src/subsys/linux/elf_write_trace.rs).
# Arms a hardware write-only watchpoint on the ld-musl `.data.rel.ro`
# slot at user VA `0x7F00_0003_7e18` for the duration of the
# `CLONE_VM | CLONE_VFORK` parent-block window, plus snapshots the
# surrounding bytes before/after.  The watchpoint piggy-backs on the
# W215 four-slot DR0–DR3 plumbing in `arch/x86_64/debug_reg.rs`; any
# kernel-mode write to the watched window fires `#DB` (Intel SDM Vol.
# 3A §6.15) and emits `[W215/DR-WATCH-FIRE] slot=… cpu=… rip=… cr3=…`
# carrying the writer's RIP.  Investigative tool only — gated so master
# builds are byte-identical.  See POSIX vfork(2) / clone(2), Intel SDM
# Vol. 3B §17.2.4 / §17.2.5, System V AMD64 ABI §6.4.  Implies
# `w215-diag` (DR0–DR3 infra) and `firefox-test` (trace formatters).
elf-write-trace = ["w215-diag", "firefox-test"]
# SSP-canary divergence diagnostic (kernel/src/subsys/linux/ssp_diag.rs).
# When a #GP from CPL 3 fires at a user-VA whose containing VMA is the
# musl dynamic linker (`/lib/ld-musl-x86_64.so.1`) at offset `0x1c7f9`
# (the publicly-exported `__stack_chk_fail` two-byte `hlt;ret` stub —
# musl-libc-1.2.x ld-musl `.dynsym`), capture the live `IA32_FS_BASE`
# MSR, the qword at `*(fs_base + 0x28)` (the master SSP guard slot per
# x86_64 psABI §6.4 TLS variant II), and the saved-canary slot in the
# SSP-instrumented caller's frame.  The pair of values discriminates
# whether the canary divergence is caused by the saved cookie being
# mutated externally (Mode A) or by the FS_BASE MSR itself shifting
# mid-function (Mode B).  Default builds are byte-identical when this
# feature is off.  Bounded emission (capped per boot) makes the hook
# safe in a soak loop.  See POSIX sigaction(2), Intel SDM Vol. 3A §6.15
# (#GP) + §3.4.4.1 (IA32_FS_BASE), System V AMD64 ABI §6.4.
ssp-canary-diag = ["firefox-test"]
# Live `__clone` pthread-args smoking-gun diagnostic.  At each successful
# pthread-create-shape clone(2)/clone3(2) the kernel records the args
# struct VA, its backing physical frame, and the pre-call values of
# start_routine + arg into a 16-entry ring keyed by (pid, tid).  On a
# later CPL-3 #GP the trap is looked up against the ring and:
#   * `[CLONE-CHECK]` fires for every matched trap regardless of
#     start_routine value (framing-falsifier; phys-frame variance
#     distinguishes F2 mid-flight aliasing — W215 axis-N per PR #270 —
#     from F1 pre-clone userspace corruption).
#   * `[CLONE-SMOKING-GUN]` fires when start_routine == trap RIP, the
#     dispositive observable for the inner musl thread-start trampoline's
#     indirect-call corrupted-fptr framing per tech-lead cross-walk
#     verdict 2026-05-20.  (Per upstream musl libc x86_64 __clone, the
#     args struct VA the kernel captures lives at `*new_stack` — rsi was
#     biased by `sub $8` before the syscall.)
# Bounded to 4 emissions per category per boot.  Default builds are
# byte-identical when this feature is off.  See POSIX pthread_create(3),
# clone(2), clone3(2); AMD64 SysV ABI §3.4 calling convention; Intel SDM
# Vol. 3A §6.15 (`#GP`), Vol. 2A (HLT/RET).
clone-args-diag = ["firefox-test"]
# K2b F3 foreign-frame writer trap (kernel/src/subsys/linux/f3_watch.rs).
# Arms persistent hardware write-only watchpoints on the libxul
# `FireGLXTestProcess` `[rbp - 8]` canary slot (deterministic user VA
# `0x7ffffffee4c0`) at firefox-bin execve completion.  Two channels:
#   * user-VA — catches writes via TID 1's user mapping (including the
#     libxul prologue's `MOV [RSP+0x50], RAX` and any kernel-mode write
#     that explicitly uses the user mapping).
#   * `PHYS_OFF + backing_phys` — catches direct-map writes from any CPU
#     to the specific frame backing the VA at arm time.
# Each fire emits `[W215/DR-WATCH-FIRE] … kind_tag=1|2 …` naming the
# writer RIP + CR3.  Bounded to `F3_FIRE_CAP=32` fires per slot per
# boot.  Distinguishes K-CLONE-FORK (writer RIP in `clone_for_fork`)
# from K-VMA-GROW (writer RIP in stack-VMA grow) from K-TLB-STALE
# (zero fires + foreign data still visible at SSP-DIAG trap).
# Diagnostic-only; default builds remain byte-identical when off.
# Depends on `ssp-canary-diag` (for the SSP-DIAG correlation) and on
# `w215-diag` (for the DR0–DR3 plumbing in `arch/x86_64/debug_reg.rs`).
# See Intel SDM Vol. 3B §17.2.4 / §17.2.5 (DR0–DR3, DR7, DR6); Intel
# SDM Vol. 3A §4.10 (TLB management); System V AMD64 ABI §6.4.
f3-watch = ["firefox-test", "ssp-canary-diag", "w215-diag"]
# FS_BASE preserve-across-execution probe
# (kernel/src/subsys/linux/fs_base_trace.rs).
# Records every kernel-side `WRMSR(IA32_FS_BASE)` (Intel SDM Vol. 3A
# §3.4.4.1, MSR `0xC000_0100`) into a per-boot ring keyed by
# `(cpu, pid, tid, old_fs, new_fs, caller_rip, sc_count, seq)`.  On a
# CPL-3 SSP-canary `#GP` (per Intel SDM Vol. 2A `HLT`/`RET` + Vol. 3A
# §6.15) the trapping TID's last ≤32 events are dumped immediately after
# the existing `[SSP-DIAG]` block — distinguishing the F3-Mode-B-1
# kernel-side FS.base-shift hypothesis (some scheduler / fork / signal
# return path changed FS.base between the libxul function's prologue
# `mov %fs:0x28, %rax` store and its epilogue re-read) from the
# `ax_eq_fs28 = 1` already-known "live FS.base agrees with itself at
# trap time" property — these are NOT the same question.
# Sites instrumented: `proc::write_fs_base()` (the canonical kernel
# API — covers context-switch via `restore_tls_for_current()` AND
# `enter_user_mode()` for boot/exec/fork bootstrap) and
# `subsys/linux/syscall::sys_arch_prctl(ARCH_SET_FS)` (the explicit
# user-mode write).  `proc/thread.rs::ret_from_fork_asm` is a
# naked_asm WRMSR that is not currently on the firefox-test fork path
# (see `proc/mod.rs::create_fork_process_impl`: uses `user_mode_bootstrap`
# instead) and is intentionally not instrumented in this revision.
# Ring sized at 1024 × ~40 B = 40 KiB BSS; per-trap dump capped at
# `FS_BASE_DUMP_MAX = 8` events per boot.  Default builds remain
# byte-identical when this feature is off.
# Refs: Intel SDM Vol. 3A §3.4.4.1 (`IA32_FS_BASE`); Intel SDM Vol. 2B
# (`SYSRETQ` — does NOT auto-reload MSRs); Intel SDM Vol. 3A §6.15
# (`#GP`); System V AMD64 ABI §6.4 (TLS variant II).
fs-base-trace = ["firefox-test", "ssp-canary-diag"]
# D7 PT_TLS BSS-slot writer trap (kernel/src/subsys/linux/d7_bss_watch.rs).
# Arms a write-only hardware watchpoint on the linear address
# `fs_base - 0x18` of the firefox-bin init thread (pid=1, tid=1)
# immediately after the first `proc::write_fs_base()` WRMSR transitions
# the MSR from zero to a non-zero TLS base.  The slot covers the 8-byte
# qword that the ELF gABI §5.2 PT_TLS zero-extension rule (the
# `memsz > filesz` BSS tail required to read as zero on first access)
# governs — for firefox-bin this is part of a `MemSiz=0x20, FileSiz=0`
# PT_TLS segment, so the slot MUST read as zero at the first user-mode
# instruction.  Every write hits `[W215/DR-WATCH-FIRE] kind_tag=3 …`,
# naming the writer RIP + CR3 + CS.  CS=0x23 means a CPL-3 (upstream)
# writer; CS=0x08 means a CPL-0 (kernel) writer — which would be
# dispositive of an AstryxOS kernel-side write to the user-VA after
# zero-init.  Bounded to the existing `F3_FIRE_CAP=32` per slot per
# boot.  Single arm per boot (`D7_ARM_MAX = 1`).
# Distinguishes Phase 4 hypothesis Z1 (anon-PF returned a non-zero
# frame, no runtime write) — falsified by zero captures — from
# Z2/Z3 (some writer reaches the slot post-init) — proved by
# captures naming the writer.
# Diagnostic-only; default builds remain byte-identical when off.
# Depends on `firefox-test` (the trace formatters share infra) and
# `w215-diag` (DR0–DR3 plumbing).
# Refs: Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7), §17.3.1.1 (data-
# breakpoint trap timing); Intel SDM Vol. 3A §3.4.4.1 (`IA32_FS_BASE`);
# ELF gABI §5.2 (PT_LOAD / PT_TLS `memsz > filesz` zero-fill).
d7-bss-watch = ["firefox-test", "w215-diag"]
# D8 fault-time TLS-slot dump + phys-frame provenance
# (kernel/src/subsys/linux/d8_fault_tls_dump.rs).  Hooks the user-mode
# fatal-#PF path (idt.rs `handle_exception` vector 14) and on a
# fingerprint match (cr2=0x20, opcode prefix `49 8b 5e 20`
# = `mov 0x20(%r14), %rbx` per Intel SDM Vol. 2A §2.1, pid=1) emits a
# multi-line `[D8/FAULT-DUMP]` block containing the user-GPR state,
# the value of `[fs:-0x18]` AT FAULT TIME, the physical frame backing
# that VA, and FREE_SHADOW + ALLOC_SHADOW lookups on that phys frame
# (`w215_diag` PR #354 / Track K rings, reused by reference).
# Single-shot per boot (`D8_FIRE_MAX = 1`) — the sc=1171 fingerprint
# is deterministic, one capture dispositive.  D7 (`d7-bss-watch`,
# PR #371) catches *writes* to the slot; D8 is the orthogonal angle
# for the **Z1 — anon-mmap returned a non-zero frame on first read**
# survivor case where D7 records zero captures.  If the value at
# `[fs:-0x18]` at fault time is **zero**, Z1 is falsified.  If it is
# non-zero AND FREE_SHADOW hits, anon-PF returned a recycled frame
# without honouring the ELF gABI §5.2 PT_TLS BSS zero-fill contract
# (CWE-908).  If non-zero AND FREE_SHADOW empty, the slot was
# mutated by a path the W215 rings do not cover.  Diagnostic-only;
# default builds remain byte-identical when off.  Depends on
# `firefox-test` (trace formatters) and `w215-diag` (shadow rings).
# Refs: Intel SDM Vol. 3A §3.4.4 (`IA32_FS_BASE`), §4.10.5 (TLB);
# Intel SDM Vol. 2A §2.1 (Instruction Format); ELF gABI §5.2;
# POSIX mmap(2); CWE-908, CWE-401.
d8-tls-fault-dump = ["firefox-test", "w215-diag"]
# D15 `RegisteredThread::mThreadInfo` slot writer trap
# (kernel/src/subsys/linux/d15_mthread_watch.rs).  Hooks
# `subsys::linux::syscall::dispatch` and arms a write-only hardware
# watchpoint (Intel SDM Vol. 3B §17.2.4) on the heap qword at
# `*(fs:-0x18) + 0x38` — Mozilla's `RegisteredThread::mThreadInfo`
# field — the first time the TLS-published `sRegisteredThread` pointer
# becomes non-zero on firefox-bin pid=1 tid=1.  Each `#DB` fire emits
# `[W215/DR-WATCH-FIRE] kind_tag=4 …` naming the writer RIP, CS, CR3.
# Designed to disposition Phase 2-E (heap +0x38 reads zero at sc=1171
# despite the outer object being allocator-clean).  Two-pass workflow:
# observe ARM line to confirm the captured `tls_val` matches D8's
# `tls_at_fs_minus_0x18`, then read fire lines (or zero-captures, which
# is dispositive of "no writer between TLS publish and read").  Single
# arm per boot (`D15_ARM_MAX = 1`); persistent fires bounded by the
# existing `F3_FIRE_CAP = 32`.  Diagnostic-only; default builds remain
# byte-identical when off.  Depends on `firefox-test` (trace formatters)
# and `w215-diag` (DR plumbing).
# Refs: Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7), §17.3.1.1 (data-
# breakpoint trap timing); Intel SDM Vol. 3A §3.4.4.1 (`IA32_FS_BASE`),
# §4.6 (page boundary); System V AMD64 ABI §3.4.4 (TLS variant II);
# Mozilla searchfox `mozglue/baseprofiler/core/RegisteredThread.cpp`;
# POSIX mmap(2).
d15-mthread-watch = ["firefox-test", "w215-diag"]
# D16 SSP-canary saved-slot writer trap
# (kernel/src/subsys/linux/d16_canary_watch.rs).  Post-F3-closure (PR
# #368) the sc plateau moved to musl `__stack_chk_fail` at
# ld-musl-x86_64.so.1+0x87f9 (sc=1230-1232 deterministic, byte-identical
# 3/3 trials).  The saved canary qword on stack reads `0x30` in the
# low byte, mismatching the master canary at `fs:0x28` — the F3 SSP
# fingerprint returning at a different RIP.  Critical observation: the
# canary slot's backing physical frame `0x127114c0` is **deterministic
# across all 3 trials**.  D16 arms write-only hardware watchpoints
# (Intel SDM Vol. 3B §17.2.4) on BOTH the kernel-direct-map mirror
# (`PHYS_OFF + 0x127114c0`, deterministic-phys channel — fires on
# kernel-mode writers to the backing frame regardless of CR3) and the
# user-VA `0x7ffffffee4c0` (late-armed from the syscall-entry hook the
# first time the page is mapped under firefox-bin pid=1 tid=1 CR3).
# Each `#DB` fire emits `[W215/DR-WATCH-FIRE] kind_tag=5 …` naming the
# writer RIP, CS, CR3.  Mirrors the D15 dispatch shape (syscall-entry
# hook + arm-once latch) but anchors on the deterministic phys so the
# arm can happen at execve time without waiting for demand-paging.
# Diagnostic-only; default builds remain byte-identical when off.
# Depends on `firefox-test` (trace formatters) and `w215-diag` (DR
# plumbing).
# Refs: Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7), §17.3.1.1 (data-
# breakpoint trap timing); Intel SDM Vol. 3A §3.4.4.1 (`IA32_FS_BASE`);
# System V AMD64 ABI §3.4.1 (SSP / `__stack_chk_guard`); CWE-121
# (stack-based buffer overflow), CWE-587 (assignment of fixed address
# to pointer); musl libc `src/env/__stack_chk_fail.c`.
d16-canary-watch = ["firefox-test", "w215-diag"]
# D17 read-side aliasing test for the SSP-canary slot
# (kernel/src/subsys/linux/d17_aliasing_test.rs).  D16's two-channel
# coverage saw 32 fires on the canary slot, all CPL=3 user writers
# (the libxul / musl SSP prologue) — no CPL=0 kernel-mode writer on
# the PHYS_OFF channel.  That falsifies "kernel direct-map writer
# corrupts the slot between prologue and epilogue" but leaves one
# hypothesis open: the prologue write retired against phys `X` (the
# correct canary) and the epilogue's read resolves the same VA to
# phys `Y != X` (a residual page-table or TLB aliasing on the canary
# VA, W215-class but on a different VA).  D17 records (rip, va,
# phys, value) on every D16 fire (hooked from `handle_db_exception`
# on `kind_tag == WATCH_KIND_D16_CANARY`) and re-resolves the canary
# VA at SSP-fail `#GP` time from `ssp_diag::probe_gp_at_ssp_fail`.
# Four verdict shapes: D17-PHYS-DIFFER (read-side aliasing
# CONFIRMED — kernel PT/TLB bug, named target for fix);
# D17-PHYS-MATCH-VALUE-DIVERGED (D16 missed a writer); D17-PHYS-
# MATCH-VALUE-MATCH (no kernel-side anomaly — points to read
# instruction); D17-NO-WRITE-CAPTURED (D16 did not fire,
# inconclusive).  Diagnostic-only; default builds remain byte-
# identical when off.  Depends on `firefox-test` (trace formatters),
# `w215-diag` (DR plumbing), `d16-canary-watch` (D16 fire path),
# `ssp-canary-diag` (SSP-fail `#GP` hook site).
# Refs: Intel SDM Vol. 3A §4.6 (page-table walk, linear → phys),
# §4.10 (TLB management, PHYS_OFF coherence), §11.4 (cache coherence
# on aliased VAs); Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7),
# §17.3.1.1 (data-breakpoint trap-after-retire); System V AMD64 ABI
# §3.4.1 (SSP / `__stack_chk_guard`); POSIX `execve(2)`; CWE-787
# (out-of-bounds write via PT aliasing).
d17-aliasing-test = ["firefox-test", "w215-diag", "d16-canary-watch", "ssp-canary-diag"]
# D18 — extension of D16's SSP-canary capture to (a) raise the per-slot
# fire cap from 32 to 256 specifically for `WATCH_KIND_D16_CANARY`
# (other watchpoint kinds keep their 32-fire cap to avoid log flood)
# and (b) runtime-detect the canary slot's backing phys.  PR #383 (D17)
# showed the boot-time phys was `0x129d94c0`, not the hard-coded
# `0x127114c0`; the execve-time PHYS_OFF arm was watching a stale
# frame.  D18 captures the live backing phys at user-VA arm time
# (`virt_to_phys_in(cr3, CANARY_SLOT_VA)`) and, if it differs, re-arms
# a fresh PHYS_OFF slot on the observed frame.  Goal: directly capture
# the 33rd+ writer (the `0x30`-byte corrupting store) which D16's
# 32-fire cap missed, and conclusively settle whether it is CPL=3
# user-mode (upstream-confirmed) or CPL=0 kernel-mode (kernel issue).
# Diagnostic-only.  Default builds remain byte-identical when off.
# Depends on `d16-canary-watch` (transitive `firefox-test` + `w215-diag`).
# Refs: Intel SDM Vol. 3A §4.6 (page-table walk, linear → phys);
# Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7), §17.3.1.1 (trap-after-
# retire); System V AMD64 ABI §3.4.1 (SSP / `__stack_chk_guard`);
# POSIX `execve(2)`; CWE-121 (stack-based buffer overflow); musl
# libc `src/env/__stack_chk_fail.c`.
d18-extended-d16 = ["d16-canary-watch"]
# D20 — write-only DR watchpoint on the kernel-stack canary slot.  After
# PR #396 (multi-tier emergency kstack fallback) and PR #397 (`mm/vmm.rs`
# `BATCH` 1024→128) landed, 3/3 deterministic trials still BUGCHECK at
# `STACK_CANARY_CORRUPT (0xDEAD_0001)` on PID 2 TID 5 at sc=1230..1232,
# with ZERO `[KSTACK/TIER]` and ZERO `[KSTACK/CANARY-FAIL]` records — i.e.
# the multi-tier fallback never engaged and the writer is NOT in the
# brk(2) / munmap(2) paths PR #395 named.  D20 hooks every thread-creation
# site in `proc/mod.rs` (`create_thread`, `create_thread_blocked`,
# `clone_for_fork`, `clone_for_thread`) via `note_kstack_alloc(pid, tid,
# base, span)` and, for the first 6 PID-2 thread creations, arms a
# write-only DR on `[kernel_stack_base, +8)` via the K2b primitive
# `arm_linear_watchpoint` (PR #356).  The existing `handle_db_exception`
# path emits `[W215/DR-WATCH-FIRE] kind_tag=6 …` with the writer's RIP /
# CS / RFLAGS / CR3 + 8 qwords of stack context — per Intel SDM Vol. 3B
# §17.3.1.1 each fire names one retired writer.  Diagnostic-only; default
# builds remain byte-identical when off.  Depends on `firefox-test`
# (trace formatters) and `w215-diag` (DR plumbing).
# Refs: Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7), §17.3.1.1 (data-
# breakpoint trap timing); x86_64 SysV ABI §3.4.1 (stack-frame budgeting);
# CWE-121 (stack-based buffer overflow).
d20-kstack-canary-watch = ["firefox-test", "w215-diag"]
# D21 — write-only DR watchpoint on PID 1's user-mode saved-canary stack
# slot at the moment of the `CLONE_VM|CLONE_VFORK` PRE-block.  After PRs
# #388 → #400 closed the kernel-mode `STACK_CANARY_CORRUPT` class, 2/2
# fresh-master trials reproduce a user-mode SSP failure on PID 1: #GP at
# RIP `ld-musl-x86_64.so.1 + 0x1c7f9`, which `objdump -d` identifies as
# musl's `__stack_chk_fail` two-byte stub (`f4 c3` = HLT;RET; HLT from
# CPL=3 raises #GP per Intel SDM Vol. 2A).  AstryxOS encodes that as
# `exit_group(-13)`.  The TCB master canary at `FS:0x28` is stable
# across the vfork window per the existing `[VFORK/CANARY]` snapshots,
# so the corruption is on a stack-frame saved-canary slot.  D21 walks
# the parent's user RBP chain from the saved syscall frame, finds the
# libxul SSP-instrumented caller's `[rbp-8]` slot (System V AMD64 ABI
# §3.2.2 + GCC SSP convention), and arms a write-only DR on it via
# `arm_linear_watchpoint(va, 8, WATCH_KIND_D21_USER_CANARY)`.  The
# existing `handle_db_exception` path emits `[W215/DR-WATCH-FIRE]
# kind_tag=7 …` naming the writer's RIP / CS / CR3 (Intel SDM Vol. 3B
# §17.3.1.1 — each fire names one retired writer).  Hook site:
# `subsys/linux/syscall.rs` PRE-block tails for clone(2)/clone3(2)
# alongside `vfork_diag::snapshot_canaries` / `arm_master_canary_watch`.
# Diagnostic-only; default builds remain byte-identical when off.
# Depends on `firefox-test` (path gating + thread table) and `w215-diag`
# (DR plumbing + handle_db_exception).
# Refs: Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7), §17.3.1.1 (data-
# breakpoint trap-after-retire); Intel SDM Vol. 2A (`HLT`); Intel SDM
# Vol. 3A §4.10 (TLB management); System V AMD64 ABI §3.2.2 (stack
# frame layout), §3.4.5.2 (SSP); POSIX `vfork(3p)`; CWE-121.  Prior
# art: PR #399 (D20 kernel-stack canary), PR #382 (D16 user-VA SSP).
d21-user-canary-watch = ["firefox-test", "w215-diag"]
# D22 — PHYS_OFF channel companion to D21 for user-canary phys-aliasing
# detection (Wave 13).  After PR #404 (D21 linear-VA arm) captured user-
# canary writers as legitimate musl prologue pushes, and PR #406 / PR #407
# rejected mechanisms A (alignment), B (signal-frame), B1/B2 (substitution
# gate sub-shapes), and C (kstack drift), the convergent verdict is
# Mechanism D — phys-aliasing on the user stack (same class as PR #248
# H3a/H3b on file-backed shared cache).  D22 mirrors PR #356's K2b two-
# channel pattern: at the same vfork-PRE-block hook D21 uses, arms a
# linear watchpoint on the canary VA AND a PHYS_OFF mirror on the
# observed backing physical frame.  The new `record_d22_fire` hook in
# `handle_db_exception` re-walks the user VA under the firing CR3 (Intel
# SDM Vol. 3A §4.6) to capture `phys_at_write`; the read-side
# `record_ssp_check` hook in `ssp_diag::probe_gp_at_ssp_fail` emits
# `phys_at_read` at the moment of the SSP `#GP` trap.  The dispositive
# comparison is `phys_at_write != phys_at_read` for the same `tid:pid`
# pair — Mechanism D confirmed if differ, rejected if equal.  Bounded
# by `D22_ARM_MAX = 4` total arms per boot plus the `F3_FIRE_CAP` per-
# slot fire bound.  Diagnostic-only; default builds remain byte-
# identical when off.  Depends on `firefox-test` (path gating + thread
# table), `w215-diag` (DR plumbing + handle_db_exception), and
# `ssp-canary-diag` (the `probe_gp_at_ssp_fail` hook site where the
# `[D22/SSP-CHECK]` read-time emission lives).  Refs:
# Intel SDM Vol. 3B §17.2.4 (DR0–DR3, DR7); §17.3.1.1 (data-breakpoint
# trap-after-retire); Intel SDM Vol. 3A §4.6 (page-table walk),
# §4.10.5 (TLB-coherency invariant); System V AMD64 ABI §3.2.2 (frame
# layout), §3.4.5.2 / §6.4 (SSP / `__stack_chk_guard` at fs:0x28);
# POSIX `vfork(3p)`; CWE-121.  Prior art: PR #248 (W215 H3a/H3b file-
# backed phys-alias), PR #356 (K2b two-channel `linear_watchpoint` +
# `phys_watchpoint` pattern), PR #404 (D21 linear-VA channel — same
# arm site), PR #407 (Wave 12 aether audit — convergent Mechanism D
# verdict).
d22-user-canary-phys = ["firefox-test", "w215-diag", "ssp-canary-diag"]
# Track B (Phase 5, 2026-05-21) — stack-page write provenance ring.
# Records kernel-mode writes whose target user VA falls into the
# `[0x3f00_0000_0000, 0x4000_0000_0000)` thread-stack range (per Phase 4
# `phase_4_post_aslr_fs_base_trace_2026_05_21`, TID 7's `saved_slot` at
# `0x3f5e7c5850`).  Instrumented call sites: `alloc_vfork_child_stack`
# (vfork helper-stack seed), `alloc_vfork_child_tls` (vfork TLS init),
# `setup_user_stack` (initial-stack auxv/argv writes — out-of-window for
# the main-thread `USER_STACK_TOP=0x7fff_…`, but still recorded
# defensively).  Dumped at `[SSP-DIAG-STACK-PROV]` time keyed on
# `saved_slot_phys`.  Closes the kernel-direct-map blind spot of the
# `f3-watch` linear-VA DR0–DR3 channel (Intel SDM Vol. 3B §17.2.4 —
# hardware watchpoints trap on linear-VA only).  Two 256-entry rings
# (by-phys + sequential) × ~64 B/entry = ~32 KiB BSS.  Default builds
# remain byte-identical when this feature is OFF.
stack-prov = ["firefox-test", "ssp-canary-diag"]
# `[VMA-DUMP]` on fatal user-mode exceptions.  At each fatal user-mode
# #PF / #UD / #GP / #AC that terminates the process (no installed
# handler) the kernel emits a full enumeration of the trapping
# process's VMAs: base, end, size, prot, file/anon flags, name, and the
# physical frame backing the first page of each VMA.  This anchors PIE
# ASLR bases — with 28-bit per-exec entropy (1 TiB window) the libxul
# and ld-musl bases vary across boots, so an interpreter looking at a
# trapping RIP value cannot resolve "0x7f000001c7f9 is in ld-musl
# `__stack_chk_fail`" without the same-trial VMA layout.  Bounded to
# 4 dumps per boot × 256 VMAs/dump.  Default builds are byte-identical
# when this feature is off.  See Intel SDM Vol. 3A §6.15 (#GP), §4.5
# (4-Level Paging); POSIX mmap(2); ELF-64 gABI §3 (Program Loading).
vma-dump-on-gp = ["firefox-test"]
# Producer-side snapshot of every exiting thread keyed by (pid, tid), with a
# lookup at the kernel-mode fatal-trap site for cases where a sibling thread
# trapped in kernel mode at a very low RIP (< 0x10000) shortly after a
# sibling's CLEARTID + FUTEX_WAKE_EXIT.  The observable framing-falsifier is
# whether the most-recently-exited sibling's recorded clear-cr3 / clear-addr /
# saved-context-rsp aliases the trapping thread's kernel-stack VA range — only
# obtainable producer-side (at exit time, before reap) because the
# scheduler/reaper will have removed the dying thread's table entry by the
# time the trap fires.  Lossy ring of 16 entries per CPU; emission gated to
# the first 4 traps per boot.  Default builds remain byte-identical when this
# feature is OFF.  See Intel SDM Vol. 3A §6.15 (#GP), §4.5 (Paging); System V
# AMD64 ABI §3.4 (kernel-mode trap frame layout); POSIX clone(2)
# CLONE_CHILD_CLEARTID semantics.
kernel-gp-trap-diag = ["firefox-test"]
# Per-binary `[ELF/INIT-ARRAY]` emission at every kernel-side ELF load (main
# executable + ELF interpreter).  Records DT_INIT / DT_INIT_ARRAY /
# DT_PREINIT_ARRAY virtual addresses and reads the first four DT_INIT_ARRAY
# function pointers (with their backing physical frame + W215
# pte_share_count from PR #270) while the image is still hot.  Used as a
# framing-falsifier for the W215 saga: if fn_ptrs are NULL / non-text the
# constructor table was never relocated; if they look sane the bug is post-
# init (signal-frame corruption, aliasing-after-launch, etc.).  Bounded to
# the first 8 images per boot, then emits a single OVERFLOW marker.
# Default builds remain byte-identical when this feature is OFF.  See
# ELF gABI §5.7 (Initialization and Termination Functions), System V AMD64
# ABI §3.3.3 (`_init` semantics), and glibc `_dl_init` (publicly documented
# at <https://www.gnu.org/software/libc/manual/html_node/Dynamic-Linker-Hooks.html>).
elf-init-array-diag = ["firefox-test"]
# File-struct buf/buf_size corruption witness for the B-1 gate
# (ld-musl+0x44aeb NULL-deref in `memchr` called from `fgets`).
# Snapshots `[page_base+0x68, +0x78)` (the page offsets at which musl
# 1.2.5's FILE struct places `f->buf` and `f->buf_size` when the
# FILE lives at page-offset 0x10) on every `sys_read_linux` entry and
# exit, comparing the pair and emitting `[F_BUF_DELTA]` /
# `[F_BUF_ZERO]` lines when the field state matches the empirical
# fault pattern documented by the prior gate-ownership verdicts (K1+
# K2+K3 PASS but f->buf=NULL at memchr).  Default / firefox-test /
# test-mode builds remain byte-identical when this feature is OFF.
# Cite: musl public FILE layout (1.2.5), POSIX read(2), Intel SDM
# Vol. 3A §4.10.5 (TLB invariants).
file-buf-witness = ["firefox-test"]
# LLVM source-based code-coverage instrumentation (test-coverage audit
# session 5 / docs/TEST_COVERAGE_AUDIT_2026-05-16.md).  When enabled, the
# kernel must additionally be built with `-C instrument-coverage` (see
# scripts/qemu-harness.py `--features coverage` path, which sets RUSTFLAGS
# accordingly).  At test-suite exit the kernel walks the linker-delimited
# `__llvm_prf_cnts` / `__llvm_prf_data` / `__llvm_prf_names` sections plus
# the static `__llvm_covmap` / `__llvm_covfun` regions and emits the bytes
# as hex `[COV-CHUNK]` lines plus a `[COV-SUMMARY]` JSON line containing
# the region-level coverage percentage.  The harness's `coverage`
# subcommand parses these and produces a per-PR-friendly report.  Default
# / firefox-test / test-mode builds remain byte-identical when this
# feature is OFF.  See docs/HARNESS.md.
coverage = []

[dependencies]
astryx-shared = { path = "../shared" }
spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = true
debug = 2
strip = "none"
