[package]
name = "astryx-libsys"
version = "0.1.0"
edition = "2021"
description = "AstryxOS userspace syscall library — raw syscall wrappers and runtime support"
authors = ["AstryxOS"]

# NOTE: This crate requires a custom x86_64 freestanding target to build.
# It is NOT part of the workspace Cargo.toml members.  When the kernel `qga`
# feature is enabled, kernel/build.rs invokes `cargo build` against
# `userspace/qga/`, which depends on this crate via `path = "../libsys"`.

[workspace]

[dependencies]
