[package]
name = "orbit"
version = "0.1.0"
edition = "2021"
description = "Orbit — AstryxOS user-mode shell"
authors = ["AstryxOS"]

# NOTE: This crate requires a custom x86_64 freestanding target to build.
# It is NOT part of the workspace Cargo.toml members.
# Currently Orbit is embedded as a hand-crafted ELF binary in the kernel
# (see kernel/src/proc/orbit_elf.rs).

[dependencies]
astryx-libsys = { path = "../libsys" }
